Add BasicNft and MoodNft contracts with deployment and interaction scripts
- Implement BasicNft contract for minting NFTs with token URIs.
- Create MoodNft contract to manage moods (happy/sad) with SVG images.
- Add deployment script for BasicNft.
- Implement interaction script for minting MoodNft.
- Create tests for BasicNft and MoodNft functionality.
- Add SVG images for happy and sad moods.

--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,16 @@
 src = "src"
 out = "out"
 libs = ["lib", "dependencies"]
-remappings = ["forge-std/=dependencies/forge-std-1.9.7/"]
+remappings = [
+    "@openzeppelin/=dependencies/@openzeppelin-contracts-5.3.0/",
+    "foundry-devops/=dependencies/cyfrin-foundry-devops-0.4.0rc/",
+    "forge-std/=dependencies/forge-std-1.9.7/src",
+]
+fs_permissions = [
+    { access = "read", path = "./images/" },
+    { access = "read", path = "./broadcast" },
+]
+ffi = true
 
 [soldeer]
 # whether soldeer manages remappings
@@ -25,3 +34,5 @@ recursive_deps = true
 
 [dependencies]
 forge-std = "1.9.7"
+"@openzeppelin-contracts" = "5.3.0"
+cyfrin-foundry-devops = "0.4.0rc"
